2011-01-03 Turn off tick labeling on interior subplots for
           pyplots.subplots when sharex/sharey is True. - JDH

2010-12-29 Implment axes_divider.HBox and VBox. -JJL

2010-11-22 Fixed error with Hammer projection. - BVR

2010-11-12 Fixed the placement and angle of axis labels in 3D plots. - BVR

2010-11-07 New rc parameters examples.download and examples.directory
           allow bypassing the download mechanism in get_sample_data. 
           - JKS

2010-10-04 Fix JPEG saving bug: only accept the kwargs documented
           by PIL for JPEG files. - JKS

2010-09-15 Remove unused _wxagg extension and numerix.h. - EF

2010-08-25 Add new framework for doing animations with examples.- RM

2010-08-21 Remove unused and inappropriate methods from Tick classes:
           set_view_interval, get_minpos, and get_data_interval are
           properly found in the Axis class and don't need to be
           duplicated in XTick and YTick. - EF

2010-08-21 Change Axis.set_view_interval() so that when updating an
           existing interval, it respects the orientation of that
           interval, and can enlarge but not reduce the interval.
           This fixes a bug in which Axis.set_ticks would
           change the view limits of an inverted axis. Whether
           set_ticks should be affecting the viewLim at all remains
           an open question. - EF

2010-08-16 Handle NaN's correctly in path analysis routines.  Fixes a
           bug where the best location for a legend was not calculated
           correctly when the line contains NaNs. - MGD

2010-08-14 Fix bug in patch alpha handling, and in bar color kwarg - EF

2010-08-12 Removed all traces of numerix module after 17 months of
           deprecation warnings. - EF

2010-08-05 Added keyword arguments 'thetaunits' and 'runits' for polar
           plots.  Fixed PolarAxes so that when it set default
           Formatters, it marked them as such.  Fixed semilogx and